<resources>
    <string name="app_name">スマのん_テスト</string>
    <!-- ボタン表記 -->
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="spot">Spot</string>
    <string name="memo">Memo</string>
    <string name="map">Map</string>
    <string name="record">reco</string>
    <string name="document">Document</string>
    <string name="detox">DetoxRecord</string>
    <string name="share_button">Instagramにシェア</string>
    <!-- タイマー関係 -->
    <string name="clock">00:00:00</string>
    <string name="start">スタート</string>
    <string name="stop">ストップ</string>
    <string name="end">End</string>
    <string name="keisoku">計測時間</string>
    <!-- カレンダー関係 -->
    <string name="calender_open">Open Calendar</string>
    <string name="calender_date">Selected Date:</string>
    <string name="calender_save">Save Schedule</string>
    <string name="calender_back">Back to Main</string>
    <string name="schedule_hint">Enter your schedule here</string>
    <!-- MAP関係 -->
    <string name="bt_map_current">地図表示</string>
</resources>