<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <!-- おすすめスポットボタン -->
    <!-- 公式インスタに遷移 -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="市役所用プレゼン資料"
        android:padding="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--    <Button-->
<!--        android:id="@+id/button_spot"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="156dp"-->
<!--        android:background="@drawable/rounded_button"-->
<!--        android:paddingStart="20dp"-->
<!--        android:paddingTop="10dp"-->
<!--        android:paddingEnd="20dp"-->
<!--        android:paddingBottom="10dp"-->
<!--        android:text="@string/spot"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="20sp"-->
<!--        app:backgroundTint="@null"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <!-- ここまで -->

    <!-- スタートボタン -->
    <Button
        android:id="@+id/button_start"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_button"
        android:elevation="0dp"
        android:onClick="onStart"
        android:stateListAnimator="@null"
        android:text="Start"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
    <!-- ここまで -->


    <!-- メモボタン -->
    <Button
        android:id="@+id/button_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/rounded_button"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/memo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
        android:id="@+id/editTextMemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="ここにメモを書いてください"
        android:inputType="text" />
    <!-- ここまで -->

    <!-- マップボタン -->
    <Button
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/rounded_button"
        android:onClick="onMapShowCurrentButtonClick"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/map"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1" />
    <!-- ここまで -->


    <!-- 記録ボタン -->
    <Button
        android:id="@+id/button_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/rounded_button"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/record"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!-- ここまで -->


    <!-- MOMENTテキスト -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MOMENT"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />
    <!-- ここまで -->


    <!-- capture your moment テキスト -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Capture your moment"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />
    <!-- ここまで -->

    <!-- カメラボタン -->
    <Button
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_button"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/camera"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ここまで -->
    <!-- ヘルプボタン -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:contentDescription="ヘルプボタンです"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="31dp"
        android:clickable="true"
        app:layout_constraintStart_toEndOf="@+id/button_camera"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <!-- TextView (初期状態は非表示) -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#CCFFFFFF"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="gone"></LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
